# survivor

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  instructions.html  survivor-80fb411c0072b7c7.js  survivor-80fb411c0072b7c7_bg.wasm
.github/workflows/: deploy.yml  rust.yml
src/: main.rs
src/domain/: expense.rs  income.rs  loan.rs  mod.rs  scenario.rs  status.rs  transaction.rs
src/engine/: mod.rs  simulation.rs
src/gui/: app.rs  mod.rs
src/gui/editors/: expenses_editor.rs  incomes_editor.rs  loans_editor.rs  mod.rs  scenarios_editor.rs
src/gui/panels/: controls_panel.rs  mod.rs  results_panel.rs
src/gui/widgets/: chart_view.rs  mod.rs  report_view.rs
src/report/: mod.rs  report.rs
src/utils/: export.rs  mod.rs  preview.rs
